[project]
name = "customer-support-agent"
version = "0.1.0"
description = "基于 LangChain/LangGraph 实现的客户支持状态机工作流 Agent 示例"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.16",
    "langchain",
    "langchain-community>=0.4.1",
    "langsmith",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
